# hwind2geojson

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: async_example.py  sample.hwind  threaded_example.py
src/converhwind/: __init__.py  converter.py
src/hwind2geojson/: converter.py
tests/: test_converter.py  test_thread_safety.py
