[project]
name = "hwind2geojson"
version = "0.1.0"
description = "A Python tool for converting HWIND radar data to GeoJSON format"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Luthfi Imanal Satrya", email = "luthfi.imanal@gmail.com" }
]
keywords = ["hwind", "radar", "geojson", "weather", "wind", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "typing-extensions>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/hwind2geojson"
Repository = "https://github.com/yourusername/hwind2geojson.git"
"Bug Tracker" = "https://github.com/yourusername/hwind2geojson/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hwind2geojson"]

[tool.ruff]
line-length = 100
target-version = "py38"

[dependency-groups]
dev = [
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.4",
]
